--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "postinstall": "patch-package",
+    "postinstall": "patch-package && ./node_modules/.bin/rn-nodeify --hack --install",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -37,14 +37,15 @@
   "dependencies": {
     "@apollo/client": "^3.5.5",
     "@gorhom/bottom-sheet": "^4.1.5",
-    "@helium/crypto-react-native": "^3.60.0",
+    "@helium/address": "^4.0.0",
+    "@helium/crypto-react-native": "^4.1.0",
     "@helium/currency": "^3.52.0",
     "@helium/http": "^3.63.0",
     "@helium/onboarding": "^3.59.0",
     "@helium/proto-ble": "^3.37.0",
     "@helium/react-native-sdk": "^0.2.1",
-    "@helium/transactions": "^3.49.1",
-    "@ledgerhq/hw-app-helium": "^6.26.0",
+    "@helium/transactions": "4.1.0",
+    "@ledgerhq/hw-app-helium": "^6.27.1",
     "@ledgerhq/react-native-hw-transport-ble": "^6.25.1",
     "@react-native-async-storage/async-storage": "^1.16.2",
     "@react-native-community/blur": "^3.6.0",
@@ -57,14 +58,25 @@
     "@react-navigation/stack": "^6.0.11",
     "@sentry/react-native": "^3.3.0",
     "@shopify/restyle": "^1.6.1",
+    "@tradle/react-native-http": "^2.0.0",
+    "@walletconnect/client": "^2.0.0-beta.26",
+    "@walletconnect/types": "2.0.0-beta.26",
     "angry-purple-tiger": "^1.0.5",
     "apollo3-cache-persist": "^0.13.0",
+    "assert": "^1.1.1",
+    "asyncstorage-down": "^4.2.0",
     "base-64": "^1.0.0",
     "bcrypt-react-native": "^1.1.1",
     "bignumber.js": "^9.0.2",
+    "browserify-zlib": "~0.1.4",
     "buffer": "^6.0.3",
     "camelcase-keys": "^7.0.1",
+    "console-browserify": "^1.1.0",
+    "constants-browserify": "^1.0.0",
+    "crypto": "^1.0.1",
     "date-fns": "^2.25.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.1.1",
     "events": "^3.3.0",
     "expo": "^43.0.3",
     "expo-barcode-scanner": "^11.2.1",
@@ -80,12 +92,17 @@
     "fuse.js": "^6.4.6",
     "graphql": "^16.0.1",
     "h3-js": "^3.7.2",
+    "https-browserify": "~0.0.0",
     "i18next": "^21.1.1",
     "lodash": "^4.17.21",
+    "long": "^5.2.0",
     "moti": "^0.15.3",
     "patch-package": "^6.4.7",
+    "path-browserify": "0.0.0",
+    "punycode": "^1.2.4",
     "qs": "^6.10.3",
     "query-string": "^7.1.1",
+    "querystring-es3": "~0.2.0",
     "react": "17.0.1",
     "react-async-hook": "^4.0.0",
     "react-i18next": "^11.12.0",
@@ -93,6 +110,7 @@
     "react-native-appstate-hook": "^1.0.6",
     "react-native-ble-plx": "^2.0.3",
     "react-native-config": "^1.4.4",
+    "react-native-crypto": "^2.2.0",
     "react-native-currency-format": "^1.0.19",
     "react-native-device-info": "^8.4.8",
     "react-native-flash-message": "^0.2.1",
@@ -101,11 +119,14 @@
     "react-native-icloudstore": "^0.9.0",
     "react-native-jazzicon": "^0.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-level-fs": "^3.0.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^2.1.4",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-network-info": "^5.2.1",
     "react-native-onesignal": "^4.3.7",
+    "react-native-os": "^1.0.1",
+    "react-native-randombytes": "^3.0.0",
     "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
@@ -113,6 +134,8 @@
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-sodium": "^0.4.0",
     "react-native-svg": "12.1.1",
+    "react-native-tcp": "^3.2.1",
+    "react-native-udp": "^2.1.0",
     "react-native-video": "^5.2.0",
     "react-qr-code": "^2.0.3",
     "readable-stream": "^3.6.0",
@@ -120,8 +143,14 @@
     "rxjs": "^7.5.4",
     "snakecase-keys": "^5.1.2",
     "stream": "^0.0.2",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "~0.10.25",
+    "timers-browserify": "^1.0.1",
     "tinycolor2": "^1.4.2",
-    "use-debounce": "^7.0.0"
+    "tty-browserify": "0.0.0",
+    "url": "~0.10.1",
+    "use-debounce": "^7.0.0",
+    "vm-browserify": "0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -130,6 +159,7 @@
     "@graphql-codegen/typescript": "2.4.1",
     "@graphql-codegen/typescript-operations": "^2.2.1",
     "@graphql-codegen/typescript-react-apollo": "3.2.2",
+    "@ledgerhq/hw-transport-mocker": "^6.27.1",
     "@types/graphql": "^14.5.0",
     "@types/i18n-js": "^3.8.2",
     "@types/jest": "^26.0.23",
@@ -163,10 +193,12 @@
     "react-native-codegen": "^0.0.7",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.2",
+    "rn-nodeify": "^10.3.0",
     "typescript": "~4.3.5"
   },
   "resolutions": {
-    "@types/react": "^17"
+    "@types/react": "^17",
+    "@helium/transactions": "4.1.0"
   },
   "jest": {
     "preset": "react-native",
@@ -178,5 +210,57 @@
       "json",
       "node"
     ]
+  },
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
   }
 }
