--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -219,6 +219,15 @@ dependencies {
         }
     }
 
+    // Required by stripe https://github.com/stripe/stripe-react-native#android
+    implementation 'com.google.android.material:material:1.3.0'
+
+    implementation ("androidx.appcompat:appcompat:1.3.1") {
+        version {
+            strictly '1.3.1'
+        }
+    }
+
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
