--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@react-navigation/stack": "^6.0.11",
     "@sentry/react-native": "^3.3.0",
     "@shopify/restyle": "^1.6.1",
+    "@stripe/stripe-react-native": "^0.11.0",
     "@tradle/react-native-http": "^2.0.0",
     "@walletconnect/client": "^2.0.0-beta.26",
     "@walletconnect/types": "2.0.0-beta.26",
