--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
     "@helium/proto-ble": "^3.37.0",
     "@helium/react-native-sdk": "^0.2.1",
     "@helium/transactions": "4.1.0",
-    "@ledgerhq/hw-app-helium": "^6.27.1",
-    "@ledgerhq/react-native-hw-transport-ble": "^6.25.1",
+    "@ledgerhq/hw-app-helium": "6.28.0-nightly.0",
+    "@ledgerhq/react-native-hid": "^6.28.3",
+    "@ledgerhq/react-native-hw-transport-ble": "^6.27.1",
     "@react-native-async-storage/async-storage": "^1.16.2",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/checkbox": "^0.5.12",
