--- a/package.json
+++ b/package.json
@@ -39,14 +39,15 @@
   "dependencies": {
     "@apollo/client": "~3.5.5",
     "@gorhom/bottom-sheet": "^4.1.5",
-    "@helium/address": "^4.0.0",
-    "@helium/crypto-react-native": "^4.1.0",
-    "@helium/currency": "^3.52.0",
-    "@helium/http": "^3.63.0",
-    "@helium/onboarding": "^3.59.0",
-    "@helium/proto-ble": "^3.37.0",
-    "@helium/react-native-sdk": "^0.2.1",
-    "@helium/transactions": "4.1.0",
+    "@helium/address": "^4.3.1",
+    "@helium/crypto-react-native": "^4.5.0",
+    "@helium/currency": "^4.2.0",
+    "@helium/http": "^4.4.0",
+    "@helium/onboarding": "^4.5.0",
+    "@helium/proto-ble": "^4.0.0",
+    "@helium/react-native-sdk": "^1.0.0",
+    "@helium/transactions": "^4.3.1",
+    "@helium/wallet-link": "^4.5.0",
     "@ledgerhq/hw-app-helium": "6.28.0-nightly.0",
     "@ledgerhq/react-native-hid": "^6.28.3",
     "@ledgerhq/react-native-hw-transport-ble": "^6.27.1",
