--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "lodash": "^4.17.21",
     "long": "^5.2.0",
     "moti": "^0.15.3",
+    "parse5": "^6.0.1",
     "patch-package": "^6.4.7",
     "path-browserify": "0.0.0",
     "punycode": "^1.2.4",
@@ -171,6 +172,7 @@
     "@types/i18n-js": "^3.8.2",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.175",
+    "@types/parse5": "^5.0.3",
     "@types/qs": "^6.9.7",
     "@types/react-native": "^0.66.6",
     "@types/react-native-shared-group-preferences": "^1.1.1",
