--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,6 +15,11 @@ buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
         classpath("com.android.tools.build:gradle:4.2.2")
+
+        // Expo is not able to build without this kotlin-gradle-plugin
+        // https://github.com/expo/expo/issues/15989#issuecomment-1175696527
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
