--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "react-native": "0.66.4",
     "react-native-appstate-hook": "1.0.6",
     "react-native-ble-plx": "2.0.3",
+    "react-native-charts-wrapper": "^0.5.10",
     "react-native-config": "1.4.6",
     "react-native-crypto": "2.2.0",
     "react-native-currency-format": "1.0.19",
@@ -175,6 +176,7 @@
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
     "@types/react-native": "0.66.21",
+    "@types/react-native-charts-wrapper": "^0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
     "@types/react-native-snap-carousel": "3.8.5",
     "@types/react-native-video": "5.0.14",
