--- a/package.json
+++ b/package.json
@@ -134,10 +134,12 @@
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "4.4.1",
     "react-native-os": "1.2.6",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "2.9.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.8.0",
+    "react-native-share": "^7.9.0",
     "react-native-shared-group-preferences": "1.1.23",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
@@ -146,7 +148,6 @@
     "react-native-tcp": "3.3.2",
     "react-native-udp": "2.7.0",
     "react-native-video": "5.2.0",
-    "react-qr-code": "2.0.7",
     "readable-stream": "3.6.0",
     "rn-swipe-button": "1.3.7",
     "rxjs": "7.5.6",
