--- a/ios/HeliumWalletWidget/Info.plist
+++ b/ios/HeliumWalletWidget/Info.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleName</key>
+	<key>CFBundleDisplayName</key>
 	<string>Helium Wallet Widget</string>
 	<key>NSExtension</key>
 	<dict>
