--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@react-navigation/native": "6.0.11",
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "6.2.2",
+    "@reduxjs/toolkit": "^1.8.6",
     "@shopify/restyle": "1.8.0",
     "@tradle/react-native-http": "2.0.1",
     "@walletconnect/react-native-compat": "2.0.0-rc.2",
@@ -102,7 +103,6 @@
     "i18next": "21.9.1",
     "lodash": "4.17.21",
     "long": "5.2.0",
-    "moti": "0.15.3",
     "parse5": "6.0.1",
     "patch-package": "6.4.7",
     "path-browserify": "0.0.0",
@@ -148,9 +148,12 @@
     "react-native-tcp": "3.3.2",
     "react-native-udp": "2.7.0",
     "react-native-video": "5.2.0",
+    "react-redux": "^8.0.4",
     "readable-stream": "3.6.0",
+    "redux-persist": "^6.0.0",
     "rn-swipe-button": "1.3.7",
     "rxjs": "7.5.6",
+    "semver": "^7.3.8",
     "snakecase-keys": "5.4.2",
     "stream": "0.0.2",
     "stream-browserify": "1.0.0",
@@ -183,6 +186,7 @@
     "@types/react-native-snap-carousel": "3.8.5",
     "@types/react-native-video": "5.0.14",
     "@types/react-test-renderer": "17.0.2",
+    "@types/semver": "^7.3.12",
     "@types/tinycolor2": "1.4.3",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
