--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@react-navigation/stack": "6.2.2",
     "@reduxjs/toolkit": "^1.8.6",
     "@shopify/restyle": "1.8.0",
+    "@solana/spl-token": "^0.3.5",
     "@solana/web3.js": "1.64.0",
     "@tradle/react-native-http": "2.0.1",
     "@walletconnect/react-native-compat": "2.0.0-rc.2",
