--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@gorhom/portal": "1.0.14",
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.6.2",
-    "@helium/currency": "4.7.3",
+    "@helium/currency": "file:.yalc/@helium/currency",
     "@helium/http": "4.7.5",
     "@helium/onboarding": "4.6.2",
     "@helium/proto-ble": "4.0.0",
