--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,7 +2,7 @@ require File.join(File.dirname(`node --print "require.resolve('expo/package.json
 require File.join(File.dirname(`node --print "require.resolve('react-native/package.json')"`), "scripts/react_native_pods")
 require File.join(File.dirname(`node --print "require.resolve('@react-native-community/cli-platform-ios/package.json')"`), "native_modules")
 
-platform :ios, '12.1'
+platform :ios, '12.4'
 
 require 'json'
 podfile_properties = JSON.parse(File.read('./Podfile.properties.json')) rescue {}
@@ -58,7 +58,7 @@ target 'OneSignalNotificationServiceExtension' do
 end
 
 target 'HeliumWalletWidgetExtension' do
-  pod "Apollo"
+  pod "Apollo", '0.53.0'
   pod 'react-native-config/Extension', :path => '../node_modules/react-native-config'
 end
 
