--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,11 +2,17 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "30.0.2"
+        buildToolsVersion = "31.0.0"
         minSdkVersion = 24
         compileSdkVersion = 31
-        targetSdkVersion = 30
-        ndkVersion = "21.4.7075529"
+        targetSdkVersion = 31
+        if (System.properties['os.arch'] == "aarch64") {
+            // For M1 Users we need to use the NDK 24 which added support for aarch64
+            ndkVersion = "24.0.8215888"
+        } else {
+            // Otherwise we default to the side-by-side NDK version from AGP.
+            ndkVersion = "21.4.7075529"
+        }
     }
     repositories {
         google()
@@ -14,7 +20,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
-        classpath("com.android.tools.build:gradle:4.2.2")
+        classpath("com.android.tools.build:gradle:7.2.1")
+        classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath("de.undercouch:gradle-download-task:5.0.1")
 
         // Expo is not able to build without this kotlin-gradle-plugin
         // https://github.com/expo/expo/issues/15989#issuecomment-1175696527
@@ -28,7 +36,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        mavenCentral()
+        mavenCentral{
+            content {
+                excludeGroup "com.facebook.react"
+            }
+        }
         mavenLocal()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
