--- a/package.json
+++ b/package.json
@@ -81,21 +81,21 @@
     "constants-browserify": "1.0.0",
     "crypto": "1.0.1",
     "date-fns": "2.29.2",
-    "deprecated-react-native-prop-types": "^2.3.0",
+    "deprecated-react-native-prop-types": "2.3.0",
     "dns.js": "1.0.1",
     "domain-browser": "1.2.0",
     "events": "3.3.0",
-    "expo": "43.0.5",
-    "expo-asset": "^8.6.1",
+    "expo": "46.0.16",
+    "expo-asset": "8.6.1",
     "expo-barcode-scanner": "11.4.0",
     "expo-camera": "12.3.0",
-    "expo-constants": "13.2.3",
-    "expo-haptics": "11.0.3",
-    "expo-linking": "2.4.2",
-    "expo-local-authentication": "12.0.1",
+    "expo-constants": "13.2.4",
+    "expo-haptics": "11.3.0",
+    "expo-linking": "3.2.2",
+    "expo-local-authentication": "12.3.0",
     "expo-permissions": "13.2.0",
-    "expo-secure-store": "11.0.3",
-    "expo-splash-screen": "0.13.5",
+    "expo-secure-store": "11.3.0",
+    "expo-splash-screen": "0.16.2",
     "fuse.js": "6.6.2",
     "graphql": "16.6.0",
     "h3-js": "3.7.2",
@@ -117,7 +117,7 @@
     "react-native": "0.70.3",
     "react-native-appstate-hook": "1.0.6",
     "react-native-ble-plx": "2.0.3",
-    "react-native-charts-wrapper": "^0.5.10",
+    "react-native-charts-wrapper": "0.5.10",
     "react-native-config": "1.4.6",
     "react-native-crypto": "2.2.0",
     "react-native-currency-format": "1.0.19",
@@ -135,12 +135,12 @@
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "4.4.1",
     "react-native-os": "1.2.6",
-    "react-native-qrcode-svg": "^6.1.2",
+    "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "2.9.1",
+    "react-native-reanimated": "2.11.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.8.0",
-    "react-native-share": "^7.9.0",
+    "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.23",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
@@ -179,7 +179,7 @@
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
     "@types/react-native": "0.66.21",
-    "@types/react-native-charts-wrapper": "^0.5.2",
+    "@types/react-native-charts-wrapper": "0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
     "@types/react-native-snap-carousel": "3.8.5",
     "@types/react-native-video": "5.0.14",
