--- a/package.json
+++ b/package.json
@@ -214,7 +214,8 @@
   },
   "resolutions": {
     "@types/react": "17",
-    "@helium/transactions": "4.7.5"
+    "@helium/transactions": "4.7.5",
+    "react-native-sodium": "0.4.0"
   },
   "jest": {
     "preset": "react-native",
