--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@gorhom/bottom-sheet": "4.4.3",
     "@gorhom/portal": "1.0.14",
     "@helium/address": "4.6.2",
-    "@helium/crypto-react-native": "file:.yalc/@helium/crypto-react-native",
-    "@helium/currency": "file:.yalc/@helium/currency",
+    "@helium/crypto-react-native": "4.8.0",
+    "@helium/currency": "4.8.0",
     "@helium/http": "4.7.5",
     "@helium/onboarding": "4.6.2",
     "@helium/proto-ble": "4.0.0",
