--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -22,8 +22,7 @@ org.gradle.jvmargs=-Xmx4608m -XX:MaxMetaspaceSize=512m
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
-# We do this in package.json post install to avoid app center errors
-android.enableJetifier=false
+android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.125.0
