--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
     "@helium/transactions": "4.7.5",
-    "@helium/wallet-link": "4.7.5",
+    "@helium/wallet-link": "^4.8.1",
     "@ledgerhq/hw-app-helium": "6.28.0-nightly.0",
     "@ledgerhq/react-native-hid": "6.28.4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
