--- a/android/build.gradle
+++ b/android/build.gradle
@@ -58,4 +58,11 @@ allprojects {
         google()
         maven { url 'https://www.jitpack.io' }
     }
+    def REACT_NATIVE_VERSION = new File(['node', '--print',"JSON.parse(require('fs').readFileSync(require.resolve('react-native/package.json'), 'utf-8')).version"].execute(null, rootDir).text.trim())
+
+    configurations.all {
+        resolutionStrategy {
+            force "com.facebook.react:react-native:" + REACT_NATIVE_VERSION
+        }
+    }
 }
