--- a/package.json
+++ b/package.json
@@ -43,22 +43,28 @@
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency": "^4.8.1",
+    "@helium/distributor-oracle": "^0.0.5",
     "@helium/http": "4.7.5",
+    "@helium/idls": "^0.0.5",
+    "@helium/lazy-distributor-sdk": "^0.0.5",
     "@helium/onboarding": "4.6.2",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
+    "@helium/spl-utils": "^0.0.5",
     "@helium/transactions": "4.7.5",
     "@helium/wallet-link": "^4.8.1",
     "@ledgerhq/hw-app-helium": "6.28.0-nightly.0",
     "@ledgerhq/react-native-hid": "6.28.4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
-    "@metaplex-foundation/js": "^0.16.0",
+    "@metaplex-foundation/js": "0.17.6",
+    "@project-serum/anchor": "0.25.0",
     "@react-native-async-storage/async-storage": "1.17.9",
-    "@react-native-community/blur": "4.2.0",
+    "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.12",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
     "@react-native-community/netinfo": "7.1.12",
+    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "6.0.11",
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "6.2.2",
@@ -74,9 +80,11 @@
     "apollo3-cache-persist": "0.13.0",
     "assert": "1.5.0",
     "asyncstorage-down": "4.2.0",
+    "axios": "^1.2.0",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
     "bignumber.js": "9.1.0",
+    "bn.js": "^5.2.1",
     "browserify-zlib": "0.1.4",
     "bs58": "5.0.0",
     "buffer": "6.0.3",
@@ -179,6 +187,7 @@
     "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-apollo": "3.2.2",
     "@ledgerhq/hw-transport-mocker": "6.27.2",
+    "@types/bn.js": "^5.1.1",
     "@types/graphql": "14.5.0",
     "@types/i18n-js": "3.8.2",
     "@types/jest": "26.0.24",
