--- a/package.json
+++ b/package.json
@@ -43,28 +43,34 @@
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency": "^4.8.1",
+    "@helium/distributor-oracle": "0.0.5",
     "@helium/http": "4.7.5",
+    "@helium/idls": "0.0.5",
+    "@helium/lazy-distributor-sdk": "0.0.5",
     "@helium/onboarding": "4.6.2",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
+    "@helium/spl-utils": "0.0.5",
     "@helium/transactions": "4.7.5",
     "@ledgerhq/hw-app-helium": "6.29.1",
+    "@helium/wallet-link": "4.8.1",
     "@ledgerhq/react-native-hid": "6.28.4",
     "@react-native-async-storage/async-storage": "1.17.11",
-    "@helium/wallet-link": "^4.8.1",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
-    "@metaplex-foundation/js": "^0.16.0",
-    "@react-native-community/blur": "4.2.0",
+    "@react-native-community/netinfo": "9.3.5",
+    "@metaplex-foundation/js": "0.17.6",
+    "@project-serum/anchor": "0.25.0",
+    "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.12",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
-    "@react-native-community/netinfo": "9.3.5",
+    "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/native": "6.0.11",
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "6.2.2",
-    "@reduxjs/toolkit": "^1.8.6",
+    "@reduxjs/toolkit": "1.8.6",
     "@shopify/restyle": "1.8.0",
-    "@solana/spl-token": "^0.3.5",
+    "@solana/spl-token": "0.3.5",
     "@solana/web3.js": "1.64.0",
     "@tradle/react-native-http": "2.0.1",
     "@walletconnect/react-native-compat": "2.0.0-rc.2",
@@ -74,9 +80,11 @@
     "apollo3-cache-persist": "0.13.0",
     "assert": "1.5.0",
     "asyncstorage-down": "4.2.0",
+    "axios": "1.2.0",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
     "bignumber.js": "9.1.0",
+    "bn.js": "5.2.1",
     "browserify-zlib": "0.1.4",
     "bs58": "5.0.0",
     "buffer": "6.0.3",
@@ -152,12 +160,12 @@
     "react-native-tcp": "3.3.2",
     "react-native-udp": "2.7.0",
     "react-native-video": "5.2.0",
-    "react-redux": "^8.0.4",
+    "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
-    "redux-persist": "^6.0.0",
+    "redux-persist": "6.0.0",
     "rn-swipe-button": "1.3.7",
     "rxjs": "7.5.6",
-    "semver": "^7.3.8",
+    "semver": "7.3.8",
     "snakecase-keys": "5.4.2",
     "stream": "0.0.2",
     "stream-browserify": "1.0.0",
@@ -179,6 +187,7 @@
     "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-apollo": "3.2.2",
     "@ledgerhq/hw-transport-mocker": "6.27.2",
+    "@types/bn.js": "^5.1.1",
     "@types/graphql": "14.5.0",
     "@types/i18n-js": "3.8.2",
     "@types/jest": "26.0.24",
