--- a/package.json
+++ b/package.json
@@ -39,23 +39,24 @@
     "@coral-xyz/anchor": "0.26.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
+    "@helium/account-fetch-cache": "^0.2.5",
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency": "4.11.1",
     "@helium/currency-utils": "0.1.1",
     "@helium/data-credits-sdk": "0.1.2",
-    "@helium/distributor-oracle": "^0.2.4",
+    "@helium/distributor-oracle": "^0.2.5",
     "@helium/fanout-sdk": "0.1.2",
     "@helium/helium-entity-manager-sdk": "0.1.2",
     "@helium/helium-react-hooks": "0.1.2",
     "@helium/helium-sub-daos-sdk": "0.1.2",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.0.53",
+    "@helium/idls": "^0.2.5",
     "@helium/lazy-distributor-sdk": "0.1.2",
     "@helium/onboarding": "4.9.0",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
-    "@helium/spl-utils": "0.1.2",
+    "@helium/spl-utils": "^0.2.5",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "0.1.2",
     "@helium/voter-stake-registry-sdk": "0.1.2",
