--- a/ios/HeliumWallet/Info.plist
+++ b/ios/HeliumWallet/Info.plist
@@ -67,6 +67,8 @@
 	<string>Allow Helium to authenticate with Face ID</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Allow Location</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Allow this app to use your location to add your Hotspots to the network</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Allow Location</string>
 	<key>NSUserActivityTypes</key>
