--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@coral-xyz/anchor": "0.26.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "^0.2.16",
-    "@helium/account-fetch-cache-hooks": "^0.2.16",
+    "@helium/account-fetch-cache": "file:.yalc/@helium/account-fetch-cache",
+    "@helium/account-fetch-cache-hooks": "file:.yalc/@helium/account-fetch-cache-hooks",
     "@helium/address": "4.6.2",
     "@helium/circuit-breaker-sdk": "^0.2.16",
     "@helium/crypto-react-native": "4.8.0",
@@ -50,7 +50,7 @@
     "@helium/distributor-oracle": "^0.2.16",
     "@helium/fanout-sdk": "^0.2.16",
     "@helium/helium-entity-manager-sdk": "^0.2.16",
-    "@helium/helium-react-hooks": "^0.2.16",
+    "@helium/helium-react-hooks": "file:.yalc/@helium/helium-react-hooks",
     "@helium/helium-sub-daos-sdk": "0.2.16",
     "@helium/http": "4.7.5",
     "@helium/idls": "^0.2.16",
