--- a/package.json
+++ b/package.json
@@ -39,29 +39,29 @@
     "@coral-xyz/anchor": "0.26.0",
     "@gorhom/bottom-sheet": "4.4.6",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "file:.yalc/@helium/account-fetch-cache",
-    "@helium/account-fetch-cache-hooks": "file:.yalc/@helium/account-fetch-cache-hooks",
+    "@helium/account-fetch-cache": "^0.2.17",
+    "@helium/account-fetch-cache-hooks": "^0.2.17",
     "@helium/address": "4.6.2",
-    "@helium/circuit-breaker-sdk": "^0.2.16",
+    "@helium/circuit-breaker-sdk": "^0.2.17",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency-utils": "0.1.1",
-    "@helium/data-credits-sdk": "0.2.16",
-    "@helium/distributor-oracle": "^0.2.16",
-    "@helium/fanout-sdk": "^0.2.16",
-    "@helium/helium-entity-manager-sdk": "^0.2.16",
-    "@helium/helium-react-hooks": "file:.yalc/@helium/helium-react-hooks",
-    "@helium/helium-sub-daos-sdk": "0.2.16",
+    "@helium/data-credits-sdk": "^0.2.17",
+    "@helium/distributor-oracle": "^0.2.17",
+    "@helium/fanout-sdk": "^0.2.17",
+    "@helium/helium-entity-manager-sdk": "^0.2.17",
+    "@helium/helium-react-hooks": "^0.2.17",
+    "@helium/helium-sub-daos-sdk": "^0.2.17",
     "@helium/http": "4.7.5",
-    "@helium/idls": "^0.2.16",
-    "@helium/lazy-distributor-sdk": "^0.2.16",
+    "@helium/idls": "^0.2.17",
+    "@helium/lazy-distributor-sdk": "^0.2.17",
     "@helium/onboarding": "4.9.0",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
-    "@helium/spl-utils": "^0.2.16",
+    "@helium/spl-utils": "^0.2.17",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "0.1.2",
     "@helium/voter-stake-registry-sdk": "0.1.2",
-    "@heliurm/wallet-link": "4.10.0",
+    "@helium/wallet-link": "4.10.0",
     "@ledgerhq/hw-app-helium": "6.29.1",
     "@ledgerhq/react-native-hid": "6.28.4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
