--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@shopify/restyle": "1.8.0",
     "@solana/spl-account-compression": "0.1.4",
     "@solana/spl-token": "0.3.6",
+    "@solana/spl-token-registry": "^0.2.4574",
     "@solana/wallet-adapter-react": "^0.15.33",
     "@solana/wallet-standard-features": "1.0.0",
     "@solana/web3.js": "1.64.0",
